--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "firebase": "^9.6.3",
     "handlebars": "^4.7.7",
     "l": "^0.6.0",
     "tui-pagination": "^3.4.1"
